SERVER-13739: don't delete new files until as late as possible during repair